# ml-article-tagging

./: .gitignore  pyproject.toml  readme.md
configs/: scibert.yaml
data/raw/: test_data.jsonl
notebooks/: 01_eda.ipynb  02_preprocessing_and_tokenization.ipynb  03_model.ipynb  ml-article-tagging.ipynb
scripts/: batch_infer.py  evaluate_test_set.py  get_data.py  infer.py  preprocess.py  run_experiments.py  run_training.py  select_best_model.py  serve_online.py
src/ml_article_tagging/: config.py  data.py  model.py  predictor.py  train.py  utils.py
tests/: test_serve.py
texts/: sample_article.txt
